--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,3 +56,28 @@ task archive(type: Zip) {
         "assignment_"+stdout.toString().trim()
     }() + ".zip"
 }
+
+
+task archive(type: Zip) {
+    def projectDir = "${projectDir.parentFile}/"
+    delete fileTree(projectDir) {
+        include '*.zip'
+    }
+
+    def projectDirFile = new File(projectDir)
+    from projectDirFile
+    destinationDirectory = projectDirFile
+    include '**'
+    exclude '*.zip'
+    exclude '**/*.lock'
+    exclude 'app/build'
+    archiveFileName = {
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'describe', '--match=', '--always', '--dirty', '--abbrev=7'
+            standardOutput = stdout
+        }
+        "assignment_"+stdout.toString().trim()
+    }() + ".zip"
+}
+
